java17, dependency upgrades and humboldt (#13)
* Allow non-ASCII characters in queries.

Closes https://github.com/gbif/occurrence/issues/406

* humboldt issues

* adding DWC_DP label

* humboldt enum + gbif-api version

* duration unit enum

* upgrading dependencies and making the library work against parametric types of search classes

* using openjdk 17

* using specific sonar plugin version

* fix format action

---------

Co-authored-by: Matthew Blissett <mblissett@gbif.org>
Co-authored-by: Marcos Lopez Gonzalez <marcoslg@gmail.com>
Co-authored-by: fmendezh <federicomh@gmail.com>